# latent-ir

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: regression-gates.yml
ci/baselines/: benchmark_baseline.json  eval_text_baseline.json
ci/datasets/: benchmark_ci.json  eval_text_ci.json  spatial_corpus_ci.json
docs/: architecture.md  benchmarking.md  datasets.md  launch-readiness.md  learned-encoders.md  model-manifests.md  perceptual-controls.md  roadmap.md  spatial-layouts.md
examples/: macro_trajectory_rise.json  presets.json
examples/layouts/: custom_16_0_circle_10m_origin.json  custom_16_0_circle_10m_origin_cartesian_only.json  custom_16_0_ring.json  custom_abc_12.json
examples/morph/: alpha_ramp.json
scripts/: ci_regression_gates.sh  generate_demo_pack.sh  install_local.sh
src/: main.rs
src/cli/: mod.rs
src/commands/: ab_test.rs  analyze.rs  benchmark.rs  dataset.rs  eval.rs  generate.rs  mod.rs  model.rs  morph.rs  preset.rs  render.rs  sample.rs  train_encoder.rs
src/core/: mod.rs
src/core/analysis/: mod.rs
src/core/benchmark/: mod.rs
src/core/conditioning/: mod.rs
src/core/dataset/: mod.rs
src/core/descriptors/: mod.rs
src/core/eval/: mod.rs
src/core/generator/: mod.rs
src/core/model/: mod.rs
src/core/morph/: mod.rs
src/core/perceptual/: mod.rs
tests/: ab_test_tests.rs  benchmark_tests.rs  cli_json_tests.rs  conditioning_tests.rs  core_tests.rs  dataset_tests.rs  eval_tests.rs  model_validate_tests.rs  perceptual_tests.rs  render_spatial_qa_tests.rs  spatial_corpus_tests.rs  train_encoder_tests.rs
(+11 files in other folders)
