[package]
name = "latent-ir"
version = "0.1.0"
edition = "2021"
description = "Generative impulse responses and acoustic spaces for the command line"
license = "MIT"
repository = "https://github.com/your-org/latent-ir"

[features]
default = []
onnx = ["dep:tract-onnx"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rustfft = "6.2"
tract-onnx = { version = "0.22", optional = true }
sha2 = "0.10"

[dev-dependencies]
approx = "0.5"
tempfile = "3.12"
